common/knative/knative-serving/base/allow-webhook-apiserver.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: webhook-apiserver
  namespace: knative-serving
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - webhook
    - key: role
      operator: In
      values:
      - webhook
  # The kubernetes api server must reach the webhook
  ingress:
  - ports:
    - protocol: TCP
      port: 8443
  policyTypes:
  - Ingress
